11811
This is according to the spec, double is not converted to float.

{code}
lucmac:community-builds luc$ scala
Welcome to Scala version 2.11.6 (Java HotSpot(TM) 64-Bit Server VM, Java 1.6.0_65).
Type in expressions to have them evaluated.
Type :help for more information.

scala> val x: Float = 0.1
<console>:7: error: type mismatch;
 found   : Double(0.1)
 required: Float
       val x: Float = 0.1
                      ^
{code}

See "Numeric Widening" http://www.scala-lang.org/files/archive/spec/2.11/06-expressions.html#value-conversions

which refers to "weak conformance" http://www.scala-lang.org/files/archive/spec/2.11/03-types.html#weak-conformance

See also http://www.scala-lang.org/files/archive/spec/2.11/12-the-scala-standard-library.html#numeric-value-types
